--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
             <div
                 class="mt-6 lg:mt-12 flex flex-col lg:flex-row justify-around border-2 rounded-2xl p-6 lg:p-8 gap-6 lg:gap-10">
                 <div class="flex flex-1">
-                    <img src="./Images/11.png" alt="" class="w-full h-[180px] lg:h-auto ">
+                    <img src="./Images/11.png" alt="" class="w-full h-[180px] lg:h-auto">
                 </div>
                 <div class="flex flex-col flex-1 justify-around">
 
@@ -597,7 +597,7 @@
                                 and durability, our gear is the epitome of excellence.</p>
                         </div>
                     </div>
-                    <hr class="mt-1 lg:mt-6">
+                    <hr class="mt-1 lg:mt-4">
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
@@ -609,7 +609,7 @@
                                 strength, and enhancing game intelligence.</p>
                         </div>
                     </div>
-                    <hr class="mt-1 lg:mt-6">
+                    <hr class="mt-1 lg:mt-4">
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
@@ -620,7 +620,7 @@
                                 needs, our one-on-one sessions provide focused attention to amplify your skills.</p>
                         </div>
                     </div>
-                    <hr class="mt-1 lg:mt-6">
+                    <hr class="mt-1 lg:mt-4">
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
@@ -632,7 +632,7 @@
                                 enjoy the thrill of ascending under your own power.</p>
                         </div>
                     </div>
-                    <hr class="mt-1 lg:mt-6">
+                    <hr class="mt-1 lg:mt-4">
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
@@ -645,7 +645,7 @@
                                 or appointment is just a click away.</p>
                         </div>
                     </div>
-                    <hr class="mt-1 lg:mt-6">
+                    <hr class="mt-1 lg:mt-4">
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold">
@@ -691,7 +691,7 @@
                         <div>
                             <img src="./Images/Group1171275318.png" alt="">
                         </div>
-                        <div class="">
+                        <div class="flex ">
                             <h2 class="text-gray-500">Email : </h2>
                             <p class="text-lg font-extrabold">hockeys@support.com</p>
                         </div>
