--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                         <div>
                             <img src="./Images/Group1171275318.png" alt="">
                         </div>
-                        <div class="flex ">
+                        <div>
                             <h2 class="text-gray-500">Email : </h2>
                             <p class="text-lg font-extrabold">hockeys@support.com</p>
                         </div>
